name:                cucumber
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              shak-mar
maintainer:          shakmar@openmailbox.org
category:            Testing
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Testing.Cucumber.Types
  build-depends:       base >=4.9 && <4.10
  hs-source-dirs:      src
  default-language:    Haskell2010
