name:                cucumber
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              shak-mar
maintainer:          shakmar@openmailbox.org
category:            Testing
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Testing.Cucumber
                     , Testing.Cucumber.Mappings
                     , Testing.Cucumber.Types
  build-depends:       base >=4.9 && <4.10
                     , abacate >=0.0 && <0.1
                     , mtl >=2.2 && <2.3
                     , regex-posix >=0.95 && <0.96
                     , text >=1.2 && <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010

executable cucino
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
                     , abacate >=0.0 && <0.1
                     , cucumber
                     , mtl >=2.2 && <2.3
                     , regex-posix >=0.95 && <0.96
                     , text >=1.2 && <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
